fixed tested errors